fix: use "gap" with grid (#232)
Using "gap" with Flexbox layout is not supported on iOS Safari, instead 
Grid layout is to be used.

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -14,8 +14,9 @@
     border: $border-width solid transparent;
     border-radius: helpers.border-radius('medium');
     box-sizing: border-box;
-    display: inline-flex;
+    display: inline-grid;
     gap: helpers.space(1);
+    grid-auto-flow: column;
     justify-content: center;
     padding: helpers.space(1.5) - $border-width helpers.space(3) - $border-width;
     position: relative;
